# stackoverflow-rust

./: .env.example  Cargo.toml
migrations/2023-12-25-160322_create_questions/: down.sql  up.sql
migrations/2023-12-25-162652_create_answers/: down.sql  up.sql
src/: main.rs
src/app/answer/: controllers.rs  mod.rs  models.rs  requests.rs  service.rs
src/app/question/: controllers.rs  mod.rs  models.rs  service.rs
src/controllers/: answers.rs  questions.rs
src/database/: schema.rs
src/models/: answer.rs  question.rs
src/requests/: answers.rs  questions.rs
src/utils/: mod.rs
